fix sbt assembly