@@ -31,6 +31,7 @@ Run model on your own data by replacing below value, if leave them blank model w
 ```
 Package code to one jar and run as spark job
 ```scala
+export SBT_OPTS="-Xmx2G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=2G -Xss2M  -Duser.timezone=GMT"
 sbt assembly
 spark-submit --class Main ${location of assembled jar}
 
